stylisation des messages d'erreurs des formulaires

--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -109,3 +109,7 @@ a {
     border-width: 3px;
     background-color: var(--container-color);
 }
+#c-yup {
+    color: red;
+    font-size: medium;
+}
